hphp/hack/test/typecheck/readonly/modify.php.exp
File "modify.php", line 12, characters 3-14:
This expression is readonly, its members cannot be modified (Parsing[1002])
File "modify.php", line 18, characters 3-14:
This expression is readonly, its members cannot be modified (Parsing[1002])
File "modify.php", line 27, characters 3-14:
This expression is readonly, its members cannot be modified (Parsing[1002])
File "modify.php", line 28, characters 3-14:
This expression is readonly, its members cannot be modified (Parsing[1002])
